--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Main container -->
     <div class="wrapper flex">
-      <img src="files/clock.svg" alt="" />
+      <img src="files/clock.png" alt="" />
       <!-- Temporary time -->
       <h1 id="currentTime">00:00:00</h1>
       <!-- Main content -->
