--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <!-- Main container -->
     <div class="wrapper flex">
+      <h1>Alarm Clock</h1>
       <img src="files/clock.png" alt="" />
       <!-- Temporary time -->
       <h1 id="currentTime">00:00:00</h1>
