--- a/index.html
+++ b/index.html
@@ -11,16 +11,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="flex">
-    <!-- Welcome Back screen -->
-    <div class="d-none" id="welcomeBack">
-      <h1>Hey! Welcome back</h1>
-      <button id="resumeBtn">Resume alarm</button>
-    </div>
-
+   
     <!-- Main container -->
     <div class="wrapper flex">
       <h1>Alarm Clock</h1>
-      <img src="files/clock.png" alt="" />
+      <img src="files/clock.svg" alt="" />
       <!-- Temporary time -->
       <h1 id="currentTime">00:00:00</h1>
       <!-- Main content -->
